# fivewest

./: .gitignore  Part 3.docx  README.md
valr-frontend/: Dockerfile  README.md  package-lock.json  package.json
valr-frontend/src/: App.js
valr-project/orderbook-service/: Dockerfile  README.md  pyproject.toml
valr-project/orderbook-service/api/: config.py  orderbook.py  service.py
valr-project/orderbook-service/infrastructure/orderbook-service/: Chart.yaml  values.yaml
valr-project/orderbook-service/infrastructure/orderbook-service/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
valr-project/orderbook-service/infrastructure/orderbook-service/templates/tests/: test-connection.yaml
