[tool.poetry]
name = "valr-project"
version = "0.1.0"
description = ""
authors = ["Saki <sakil@legal.regn.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
gunicorn = "^22.0.0"


websockets = "^13.1"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]


